# google_rapid_agent_hackaton

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
apps/agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/agent/app/: GLOSSARY.md  README.md  __init__.py  config.py  ids.py  main.py  observability.py  orchestrator.py
apps/agent/app/agents/: README.md  adk_agents.py  failure.py  formatter.py  instructions.py  model_factory.py  output_schemas.py  reflection.py  reviewer.py  stub.py  workers.py
apps/agent/app/api/: README.md  runs.py  stream.py  thread_stream.py  turns.py
apps/agent/app/contracts/: README.md  __init__.py  schemas.py
apps/agent/app/eval/: README.md  __init__.py  judge.py  run_eval.py
apps/agent/app/infra_observability/: README.md  __init__.py  correlation.py  grafana_alloy.py
apps/agent/app/orchestration/: README.md  __init__.py  checkpoint.py  committer.py  context.py  emitter.py  goals.py  interpreter.py  loop.py  models.py  phases.py  router.py  workflow.py
apps/agent/app/phoenix_export/: README.md  __init__.py  phoenix.py
apps/agent/app/runtime/: README.md  blocks.py  emitter.py  episode.py  episode_query.py  hot_store.py  repository.py  restore.py  state.py  state_cache.py  store.py  thread_store.py  transitions.py
apps/agent/app/telemetry/: README.md  __init__.py  keys.py  metadata.py  service.py  trace_context.py
apps/agent/app/tools/: README.md  es_client.py  evidence.py  mcp_bridge.py  mcp_client.py  seed.py
apps/agent/scripts/: smoke_real.py
apps/agent/tests/: conftest.py  test_agent_loop_goal.py  test_analysis_round.py  test_api.py  test_contract_conformance.py  test_episode.py  test_evidence_scope.py  test_feedback.py  test_golden_path.py  test_grounding.py  test_hot_store.py  test_observability.py  test_round_runners.py  test_telemetry_metadata.py  test_text_streaming.py  test_trace_context.py
(+372 files in other folders)
