[project]
name = "launchpilot-agent"
version = "0.1.0"
description = "LaunchPilot Python Agent Service (FastAPI + Google ADK). Contract-enforced golden path."
requires-python = ">=3.10"
dependencies = [
    "google-adk>=2.1.0,<3",
    "fastapi>=0.124.1,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.12,<3",
    "httpx>=0.27,<1",
    "websockets>=12,<14",
    "python-dotenv>=1,<2",
    "mcp>=1.0,<2",
]

[project.optional-dependencies]
observability = [
    "openinference-instrumentation-google-adk",
    "arize-phoenix-otel",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
