[project]
name = "launchpilot-agent"
version = "0.1.0"
description = "LaunchPilot Python Agent Service (FastAPI + Google ADK). Round-based HITL orchestration."
requires-python = ">=3.10"
dependencies = [
    "google-adk>=2.1.0,<3",
    "fastapi>=0.124.1,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.12,<3",
    "httpx>=0.27,<1",
    "python-dotenv>=1,<2",
    "litellm>=1.80,<2",
    "mcp>=1.0,<2",
    # Redis hot tier: live ConversationState working copy (ADR-005). Gated by
    # REDIS_URL; falls back to in-process store when unset (offline mode).
    "redis>=5,<6",
    # Arize track: OpenInference tracing -> Phoenix Cloud (memory layer 4 write).
    "arize-phoenix-otel>=0.6",
    "openinference-instrumentation-google-adk>=0.1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
